# GORILLA

./: .gitignore  .zenodo.json  CMakeLists.txt  GORILLA.mk  Gorilla.mk  LICENSE  Makefile  README.md  build.sh  build.x  build_coverage.sh  build_coverage.x  fetch_polynomial234roots.sh  run_example.sh  tetra_grid.inp
.github/workflows/: Mac-make.yml  Mac.yml  Ubuntu-make.yml  Ubuntu.yml  build.yml  draft-pdf.yml
DOCUMENTATION/LATEX/: GORILLA_DOC.bib  GORILLA_DOC.tex  LICENSE  README.md  TheMartianReport.cls
DOCUMENTATION/LATEX/Plots/Matlab_Scripts/: orbit_comparison.m
DOCUMENTATION/LATEX/figures/: asdex_full_orbit_passing.eps  asdex_full_orbit_trapped.eps  asdex_poincare_mag_drifts_passing.eps  asdex_poincare_mag_drifts_trapped.eps  figure_03.eps  tetraeder.eps  title_image.eps
EXAMPLES/: run_example.sh
EXAMPLES/example_1/: GORILLA.inp  GORILLA_plot.inp  MHD_MHD_EQUILIBRIA  gorilla.inp  gorilla_plot.inp
EXAMPLES/example_2/: gorilla.inp  gorilla_plot.inp  tetra_grid.inp
EXAMPLES/example_3/: gorilla.inp  gorilla_plot.inp  tetra_grid.inp
EXAMPLES/example_4/: MHD_EQUILIBRIA  gorilla.inp  gorilla_plot.inp  test_gorilla_main.x  test_gorilla_main_new.x
EXAMPLES/example_5/: gorilla.inp  gorilla_plot.inp  tetra_grid.inp
EXAMPLES/example_6/: gorilla.inp  gorilla_plot.inp  tetra_grid.inp
EXAMPLES/example_7/: gorilla.inp  gorilla_plot.inp  test_gorilla_main.x  tetra_grid.inp
EXAMPLES/example_8/: field_divB0.inp  gorilla.inp  gorilla_plot.inp  preload_for_SYNCH.inp  tetra_grid.inp
INPUT/: field_divB0.inp  gorilla.inp  preload_for_SYNCH.inp  tetra_grid.inp
JUPYTER/: README.md  gorilla_input.ipynb  plotting_tutorial.ipynb  tetra_grid_input.ipynb
MATLAB/: example_1.m  example_1_cmake.m  example_2.m  example_2_cmake.m  example_3.m  example_3_cmake.m  example_4.m  example_4_cmake.m  example_5.m  example_5_cmake.m  example_6.m  example_7.m  example_8.m  plotting_tutorial.mlx
MATLAB/functions/: InputFile.m  NameList.m  efit.m  load_copy.m  read_in.m
MHD_EQUILIBRIA/: g_file_for_test  g_file_for_test_WEST
PAPER/: paper.md
PAPER_JOSS/: paper.bib  paper.md
PREPROCESSING/SOLEDGE3X_EIRENE/MESH/: preprocess_mesh.m
PYTHON/: auxillary_functions.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  plot_example_1.py  plot_example_2.py  plot_example_3.py  plot_example_4.py  plot_example_5.py  plot_example_6.py  plot_example_7.py  plot_example_8.py  plotting_tutorial.ipynb
RUN/20210304/: field_divB0.inp  gorilla.inp  gorilla_plot.inp  tetra_grid.inp
SETUP_ENERGY/: example_7.m  example_7_developement.m
SRC/: CMakeLists.txt  SetWorkingPrecision.f90  bdivfree.f90  binsrc.f90  canonical_coordinates_mod.f90  chamb_m.f90  circular_mesh.f90  circular_mesh_SOLEDGE3X_EIRENE.f90  constants_mod.f90  differentiate.f90  field_analytic_circ_mod.f90  field_divB0.f90  field_line_integration_for_SYNCH.f90  field_line_integration_for_SYNCH_mod.f90  find_tetra_mod.f90  get_canonical_coordinates.f90  gorilla_diag_mod.f90  gorilla_plot_mod.f90  gorilla_settings_mod.f90  magdata_in_symfluxcoord.f90  magfie.f90  make_grid_rect.f90  make_grid_rect_mod.f90  new_vmec_allocation_stuff.f90  odeint_rkf45.f90  orbit_timestep_gorilla.f90  plag_coeff.f90  points_2d.f90  preload_for_SYNCH.f90  preload_for_SYNCH_mod.f90  pusher_tetra_func_mod.f90  pusher_tetra_poly.f90  pusher_tetra_poly_version _without_interface.f90  pusher_tetra_rk.f90  pusher_tetra_rk_before_adding_grid_for_find_tetra.f90  runge_kutta_mod.f90  scaling_r_theta.f90  spl_three_to_five_mod.f90  spline5_RZ.f90  spline5_RZ_mod.f90  (+15 more)
SRC/TESTS/: CMakeLists.txt  Makefile  test_binsrc.f90  test_chamb_m.f90  test_gorilla_settings_mod.f90  test_orbit_timestep_gorilla.f90  test_pusher_tetra_rk.f90  test_scaling_r_theta.f90  test_supporting_functions_mod.f90  test_tetra_grid_settings_mod.f90  test_various_functions  test_various_functions_mod.f90  test_various_functions_mod.pf
SRC/contrib/: LICENSE.cmplx_roots_sg  Polynomial234RootSolvers.f90  cmplx_roots_sg.f90  minpack_mod.f90  rkf45_mod.f90
inp_blueprints/: gorilla.inp  tetra_grid.inp
(+3 files in other folders)
